vlib/v/checker/tests/struct_assigned_to_pointer_to_struct.vv
struct Foo { x int }

fn main() {
	mut f := &Foo{ 10 }
	f = { x: 223344 }
	f = Foo{ x: 20 }
	_ = f
}
